--- a/sb_erp/src/main/resources/templates/common/wellcome.html
+++ b/sb_erp/src/main/resources/templates/common/wellcome.html
@@ -56,8 +56,8 @@
 		<blockquote class="layui-elem-quote layui-quote-nm">
 			本系统前端框架支持：X-admin（<a
 				onclick="parent.x_admin_show('X-admin主页','http://x.xuebingsi.com/')">http://x.xuebingsi.com/</a>）；
-			前端框架整合：舒松（ss112476@163.com）； 项目开发：企业资产管理系统（<a
-				onclick="parent.x_admin_show('企业资产管理系统主页','http://localhost:8080/00.08_AssetsManagementSystem/indexController/entryIndex.do')">http://localhost:8080/00.08_AssetsManagementSystem/indexController/entryIndex.do</a>）java
+			前端框架整合：胡江（hujiangyx@163.com）； 项目开发：企业资产管理系统（<a
+				onclick="parent.x_admin_show('企业资产管理系统主页','http://localhost/login')">http://localhost/login</a>）java
 			EE项目组
 		</blockquote>
 	</div>
