--- a/sb_erp/src/main/resources/templates/organization/structure.html
+++ b/sb_erp/src/main/resources/templates/organization/structure.html
@@ -59,7 +59,7 @@
 							<table>
 								<tr>
 									<th width="100px">用户账号</th>
-									<td width="270px;" id="accountNumber">XXXXX</td>
+									<td width="270px;" id="account">XXXXX</td>
 									<th width="100px">入职时间</th>
 									<td width="270px;" id="userEntrytime">2017-01-01</td>
 								</tr>
@@ -114,7 +114,3 @@
 		</div>
 	</body>
 </html>
-
-<section>
-	
-</section>
