--- a/sb_erp/src/main/resources/templates/account/userAdd.html
+++ b/sb_erp/src/main/resources/templates/account/userAdd.html
@@ -103,9 +103,9 @@
 					<span class="x-red">*</span>部门安排
 				</label>
 				<div class="layui-input-inline">
-					<select name="userDepartement" lay-filter="departSelect">
+					<select name="departId" lay-filter="departSelect">
 						<option th:each="depart:${departments}" 
-							th:value="${depart.departName}" th:text="${depart.departName}"/>
+							th:value="${depart.departId}" th:text="${depart.departName}"/>
 					</select>
 				</div>
 			</div>
@@ -114,9 +114,9 @@
 					class="x-red">*</span>职位
 				</label>
 				<div class="layui-input-inline">
-					<select name="userPosition" lay-filter="positionSelect">
+					<select name="positionId" lay-filter="positionSelect">
 						<option th:each="position:${positions}" 
-							th:value="${position.positionName}" th:text="${position.positionName}"/>
+							th:value="${position.positionId}" th:text="${position.positionName}"/>
 					</select>
 				</div>
 			</div>
@@ -127,7 +127,7 @@
 				<div class="layui-input-block">
 					<input type="checkbox" name="userRoles" lay-skin="primary" 
 						th:each="role,status : ${roles}" 
-						th:title="${role.roleName}" th:value="${role.roleId}">
+						th:title="${role.roleDesc}" th:value="${role.roleId}">
 				</div>
 			</div>
 			<div class="layui-form-item">
@@ -176,49 +176,16 @@
 	</div>
 </body>
 <script>
-   	function onlyUser(doms){
-   		if($("#userAccount").val().length<3){
-   			$("#userAccount").select();
-   			$("#account").html("至少3个字符");
-   		}else{
-   			AccountAjax();
-   		}			
-	};
 	function safePW(){
 		if($('#L_pass').val().length>5){
 			$("#password").html("<i class=\"layui-icon layui-anim layui-anim-scale \" style=\"color: #1E9FFF;\">&#xe618;</i>")
 		}
 	}
+	
 	function confirm(){
 		if($('#L_pass').val()==$('#L_repass').val()){
                  $("#confire").html("<i class=\"layui-icon layui-anim layui-anim-scale \" style=\"color: #1E9FFF;\">&#xe618;</i>") 
                }
-	}
-	function AccountAjax(){
-		$.ajax({
-			type : "POST",
-			async:false,
-			data : {
-				account:$("#userAccount").val()
-			},
-			dataType : "text",
-			url : "manageEmeController//isRepeat.ajax",
-			success : function(result) {
-				console.log(result);
-				if(result=="NO"){
-					$("#account").html("<i class=\"layui-icon layui-anim  layui-anim-scale\" style=\"color: #1E9FFF;\">&#xe618;</i>  ")
-				}else{
-					$("#userAccount").select();
-					$("#account").html("<span style=\"color: #FF5722\" class=\"layui-anim layui-anim-scale\">账号已存在!</span>")
-				}
-				
-			},
-			error : function() {
-				$("#userAccount").select();
-				$("#account").html("<span style=\"color: #FF5722\" class=\"layui-anim layui-anim-scale\">无法连接服务器!</span>")
-				layer.msg('无法连接服务器', {icon: 2});
-			}
-		});
 	}
 	
 	layui.use(['form','layer','laydate'], function(){
@@ -227,7 +194,6 @@
 		layer = layui.layer,
 		laydate=layui.laydate;
        	
-		//日期
 		laydate.render({
 			elem: '#date1',
     		trigger: 'click'
@@ -237,11 +203,10 @@
     		trigger: 'click'
 		});
 		
-		//自定义验证规则
 		form.verify({
 			nikename: function(value){
-				if(value.length < 3){
-					return '至少得3个字符啊';
+				if(value.length < 2){
+					return '至少得2个字符啊';
 				}
 			},
 			pass: [/(.+){6,12}$/, '密码必须6到12位'],
@@ -252,27 +217,21 @@
 			}
 		});
 		
-		//监听提交
 		form.on('submit(add)', function(data){
             console.log(data);
-            //发异步，把数据提交给php
-            console.log(data);
             $.ajax({
-        		url :"/account/doUserAdd",
+        		url :"/account/addUser",
         		type : "POST",
         		data : $('#form1').serialize(),
         		dataType : "text",
         		success : function(data) {
         			var result = eval("(" + data + ")");
         			if (result.status == 200) {
-        				//发异步，把数据提交给php
 						layer.msg("修改成功",{
 							icon : 1,
 							time: 500,
 						},function () {
-							// 获得frame索引
 							var index = parent.layer.getFrameIndex(window.name);
-							//关闭当前frame
 							parent.location.reload();
 							parent.layer.close(index);
 						});
@@ -289,14 +248,14 @@
 		
 		form.on('select(departSelect)', function(data){
 			$.ajax({
-				url : "/organization/positionsByDepart?departName=" + $("[name=userDepartement]").val(),
+				url : "/organization/positionsByDepart?departId=" + $("[name=departId]").val(),
 				type : "get",
 				contentType: "application/json",
 				success : function (data) {
-					$("[name=userPosition]").empty();
+					$("[name=positionId]").empty();
 					$.each(data, function(i, item){
-						$("[name=userPosition]").append("<option value="+
-								item.positionName+">"+item.positionName+"</option>");
+						$("[name=positionId]").append("<option value="+
+								item.positionId+">"+item.positionName+"</option>");
 					});
 					form.render('select');
 				},
