--- a/sb_erp/src/main/resources/templates/authority/resourceAdd.html
+++ b/sb_erp/src/main/resources/templates/authority/resourceAdd.html
@@ -75,7 +75,7 @@
 			<div class="layui-form-item" style="text-align: center;">
 				<a class="layui-btn" lay-filter="add" lay-submit="">确定 </a> <a
 					class="layui-btn layui-btn-normal"
-					onclick="javascript:history.go(-1);" style="text-align: center">返回</a>
+					onclick="javascript:x_admin_close();" style="text-align: center">返回</a>
 			</div>
 		</form>
 	</div>
@@ -94,15 +94,13 @@
 		//自定义验证规则
 		form.verify({
 			title: function(value){
-				if(value.length < 5){
-					return '标题至少得5个字符啊';
+				if(value.length < 2){
+					return '标题至少得2个字符啊';
 				}
 			},
 			repeat:function(value){
-				if(value.length < 3){
-					return '至少三个字啊';
-				}else if(isRepeat){
-					return '名称已存在';  
+				if(value.length < 2){
+					return '至少2个字啊';
 				}
 			},
 			content: function(value){
@@ -127,7 +125,7 @@
 	   		});
 			resource.roles = roles;
 			$.ajax({
-	       		url :"/authority/doPositionAdd",
+	       		url :"/authority/addResource",
 				type : "POST",
 				contentType: "application/json",
 	       		data : JSON.stringify(resource),
