--- a/sb_erp/src/main/resources/templates/authority/resourceEdit.html
+++ b/sb_erp/src/main/resources/templates/authority/resourceEdit.html
@@ -76,7 +76,7 @@
 			<div class="layui-form-item" style="text-align: center;">
 				<a class="layui-btn" lay-filter="add" lay-submit="">确定 </a> <a
 					class="layui-btn layui-btn-normal"
-					onclick="javascript:history.go(-1);" style="text-align: center">返回</a>
+					onclick="javascript:x_admin_close();" style="text-align: center">返回</a>
 			</div>
 		</form>
 	</div>
@@ -95,15 +95,13 @@
 		//自定义验证规则
 		form.verify({
 			title: function(value){
-				if(value.length < 5){
-					return '标题至少得5个字符啊';
+				if(value.length < 2){
+					return '标题至少得2个字符啊';
 				}
 			},
 			repeat:function(value){
-				if(value.length < 3){
-					return '至少三个字啊';
-				}else if(isRepeat){
-					return '名称已存在';  
+				if(value.length < 2){
+					return '至少2个字啊';
 				}
 			},
 			content: function(value){
@@ -129,7 +127,7 @@
 	   		});
 			resource.roles = roles;
 			$.ajax({
-	       		url :"/authority/doResourceEdit",
+	       		url :"/authority/editResource",
 				type : "POST",
 				contentType: "application/json",
 	       		data : JSON.stringify(resource),
@@ -153,7 +151,6 @@
 	       	});   
 			return false;
 		});
-		
 	});
 </script>
 </html>
