--- a/sb_erp/src/main/resources/templates/authority/roleList.html
+++ b/sb_erp/src/main/resources/templates/authority/roleList.html
@@ -13,13 +13,9 @@
 		<!-- 引入内部js或css -->
 		<script th:src="${'/lib/layui/layui.js'}" charset="utf-8"></script>
 		<script th:src="${'/js/xadmin.js'}" type="text/javascript"></script>
-		<script th:src="${'/js/jquery.ztree.all.js'}" type="text/javascript"></script>
-		<script th:src="${'/js/bootstrap.js'}" type="text/javascript"></script>
 		<link th:href="${'/css/font.css'}" rel="stylesheet">
 		<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
-		<link th:href="${'/css/zTreeStyle/zTreeStyle.css'}" rel="stylesheet">
 		<link th:href="${'/css/bootstrap.css'}" rel="stylesheet">
-		<link th:href="${'/css/cutsom-style.css'}" rel="stylesheet">
 	</head>
 	<body>
 		<div class="x-nav">
@@ -37,7 +33,7 @@
 						<span th:text="${role.roleName}"></span>
 						<input type="hidden" th:value="${role.roleId}"/>
 						<div style="float: right;">
-						<a><i th:onclick="x_admin_show('修改','/authority/roleEdit?roleId=[[${role.roleId}]]')" class="layui-icon">&#xe642;</i></a>
+						<a><i th:onclick="x_admin_show('修改','/authority/editRolePage?roleId=[[${role.roleId}]]')" class="layui-icon">&#xe642;</i></a>
 						<a th:onclick="del([[${role.roleId}]],[[${role.roleName}]])" name="close" ><i class="layui-icon">&#xe640;</i></a>
 					</div>
 					</div>
@@ -51,16 +47,12 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">添加新的角色</div>
 						<div class="panel-body" style="height: 110px;">
-								<div style="text-align: center;cursor: pointer;" onclick="x_admin_show('添加新角色','/authority/roleAdd')">
+								<div style="text-align: center;cursor: pointer;" onclick="x_admin_show('添加新角色','/authority/addRolePage')">
 									<i class="layui-icon" style="font-size: 80px; color: #1E9FFF;">&#xe61f;</i>  
 								</div>
 						</div>
 					</div>
 				</div>
-				<!-- end 左侧 -->
-				<!-- 页面右侧（详细信息）部分 -->
-				
-				<!-- end 右侧 -->
 			</div>
 		</div>
 	</body>
@@ -74,7 +66,7 @@
 						roleId:id
 					},
 					dataType : "text",
-					url : "/authority/doRoleDelete",
+					url : "/authority/deleteRole",
 					success : function(data) {
 						var result = eval("(" + data + ")");
 		    			if (result.status == 200) {
@@ -96,6 +88,7 @@
 			    layer.close(index);
 			});
 		}
+		
 		function addNewPannel(){
 			var str="<div class=\"col-md-4 layui-anim layui-anim-scale \"><div class=\"panel panel-default\" >"
 				str+="<div class=\"panel-heading\">后勤服务部 <a  onclick=\"removeNode(this,6666)\" style=\"float: right;\">删除</a></div>"
@@ -107,12 +100,14 @@
 				str+="</div></div></div>"			
 				$("#add").before(str);
 		}
+		
 		$(function(){
 			$("a[name='xclose']").click(function(){
     		$(this).parent().parent().remove();
     		console.log($(this).text())
 			});
 		})
+		
 		function removeNode(obj,id){
 			//it.parent.parent.remove();
 			var parent=$(obj).parent().parent().parent();
