--- a/sb_erp/src/main/resources/templates/organization/positionAdd.html
+++ b/sb_erp/src/main/resources/templates/organization/positionAdd.html
@@ -31,7 +31,7 @@
 						required="" lay-verify="required|repeat" autocomplete="off"
 						class="layui-input">
 				</div>
-				<div id="account" class="layui-form-mid layui-word-aux">
+				<div id="info" class="layui-form-mid layui-word-aux">
 					至少3个字符</div>
 			</div>
 			<div class="layui-form-item">
@@ -49,79 +49,76 @@
 					class="x-red">*</span>所属部门
 				</label>
 				<div class="layui-input-inline">
-					<select name="departName">
+					<select name="departId">
 						<option th:each="department,departmentStatus : ${departments}" 
-							th:value="${department.departName}" th:text="${department.departName}"></option>
+							th:value="${department.departId}" th:text="${department.departName}"></option>
 					</select>
 				</div>
 			</div>
 			<div class="layui-form-item" style="text-align: center;">
 				<a class="layui-btn" lay-filter="add" lay-submit=""> 确定 </a> <a
 					class="layui-btn layui-btn-normal"
-					onclick="javascript:history.go(-1);" style="text-align: center">返回</a>
+					onclick="x_admin_close();" style="text-align: center">返回</a>
 			</div>
 		</form>
 	</div>
 </body>
 <script type="text/javascript">
-var isRepeat=false;
-layui.use(['form', 'layedit', 'laydate'], function(){
-	var form = layui.form,
-	layer = layui.layer,
-	layedit = layui.layedit,
-	laydate = layui.laydate;
-  
-	//创建一个编辑器
-	var editIndex = layedit.build('LAY_demo_editor');
- 
-	//自定义验证规则
-	form.verify({
-		title: function(value){
-			if(value.length < 5){
-				return '标题至少得5个字符啊';
-			}
-		},
-		repeat:function(value){
-			if(value.length < 3){
-				return '至少三个字啊';
-			}else if(isRepeat){
-				return '名称已存在';  
-			}
-		},
-		content: function(value){
-			layedit.sync(editIndex);
-		}
-	});
-	
-	//监听提交
-	form.on('submit(add)', function(data){
-           console.log(data);
-           $.ajax({
-       		type : "POST",
-       		data : $('#form1').serialize(),
-       		dataType : "text",
-       		url :"/organization/doPositionAdd",
-       		success : function(data) {
-       			var result = eval("(" + data + ")");
-    			if (result.status == 200) {
-					layer.msg("修改成功",{
-						icon : 1,
-						time: 500,
-					},function () {
-						var index = parent.layer.getFrameIndex(window.name);
-						parent.location.reload();
-						parent.layer.close(index);
-					});
-				} else {
-					layer.msg(result.message, {icon: 0});
+	layui.use(['form', 'layedit', 'laydate'], function(){
+		var form = layui.form,
+		layer = layui.layer,
+		layedit = layui.layedit,
+		laydate = layui.laydate;
+	  
+		//创建一个编辑器
+		var editIndex = layedit.build('LAY_demo_editor');
+	 
+		//自定义验证规则
+		form.verify({
+			title: function(value){
+				if(value.length < 2){
+					return '标题至少得2个字符啊';
 				}
-       		},
-       		error : function() {
-       			layer.msg('无法连接服务器', {icon: 2});
-       		}
-       	});   
-		return false;
+			},
+			repeat:function(value){
+				if(value.length < 2){
+					return '至少两个字啊';
+				}
+			},
+			content: function(value){
+				layedit.sync(editIndex);
+			}
+		});
+		
+		//监听提交
+		form.on('submit(add)', function(data){
+	           console.log(data);
+	           $.ajax({
+	       		type : "POST",
+	       		data : $('#form1').serialize(),
+	       		dataType : "text",
+	       		url :"/organization/addPosition",
+	       		success : function(data) {
+	       			var result = eval("(" + data + ")");
+	    			if (result.status == 200) {
+						layer.msg("修改成功",{
+							icon : 1,
+							time: 500,
+						},function () {
+							var index = parent.layer.getFrameIndex(window.name);
+							parent.location.reload();
+							parent.layer.close(index);
+						});
+					} else {
+						layer.msg(result.message, {icon: 0});
+					}
+	       		},
+	       		error : function() {
+	       			layer.msg('无法连接服务器', {icon: 2});
+	       		}
+	       	});   
+			return false;
+		});
 	});
-});
 </script>
 </html>
