--- a/sb_erp/src/main/resources/templates/account/userAdd.html
+++ b/sb_erp/src/main/resources/templates/account/userAdd.html
@@ -197,7 +197,7 @@
 		layer = layui.layer,
 		laydate=layui.laydate;
        	
-		// 加载事件控件
+		// 加载时间控件
 		laydate.render({
 			elem: '#date1',
     		trigger: 'click'
